> make 231250190 asus Linux asus-VMware-Virtual-Platform 6.11.0-21-generic #21~24.04.1-Ubuntu SMP PREEMPT_DYNAMIC Mon Feb 24 16:52:15 UTC 2 x86_64 x86_64 x86_64 GNU/Linux  17:07:33 up  2:22,  1 user,  load average: 0.51, 0.78, 0.62 880be2f2ead31919132b3afceb596983808b6fa6